[package]
name = "call-rust"
description = "call-rust is an alternative solution for remote-calling, compare to grpc."
version = "0.1.0"
edition = "2021"

[futures]
default = ["connect-udp "]
connect-udp = []
connect-tcp = []

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
dashmap = "6.1.0"
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
clap = { version = "4.5.19", features = ["derive"] }
etcd-client = "0.14.0"
chrono = "0.4.38"
csv = "1.3.0"
tokio-postgres = "0.7.12"
mongodb = "3.1.0"
redis = { version = "0.27.4", features = ["tokio-comp", "json"] }
async-trait = "0.1.83"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_yml = "0.0.12"

[dev-dependencies]
env_logger = "0.11.5"
